--- a/lib/exercises.html
+++ b/lib/exercises.html
@@ -5,17 +5,21 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="../_app/immutable/assets/_layout-404d5ec8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-ae33030f.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index-ff63070f.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-1764df06.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-2bea6d64.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Ripple-015e24f7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores-95bd1728.js">
+		<link href="../_app/immutable/assets/_layout-9f83b41d.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_layout-1a07f56b.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/start-c35c644c.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index-6d0a9015.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-15ac4f7b.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-d58037d0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/SmuiElement-dbb92510.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/classAdderBuilder-af2bd1e8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Ripple-3d668b62.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores-a416b9c7.js">
 		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/_layout.svelte-95424b3d.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/exercises/_page.svelte-c990d7fb.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/_layout.svelte-37ebaad9.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/exercises/_page.svelte-2df9af45.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/exercise-efe048a6.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -23,13 +27,14 @@
 
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded">
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
 
 <link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)">
 <link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)">
 
-<div class="wrapper svelte-ddhx5u"><div class="app-body svelte-ddhx5u"><div><div class="mdc-tab-bar" role="tablist"><div class="mdc-tab-scroller"><div class="mdc-tab-scroller__scroll-area" style=""><div class="mdc-tab-scroller__scroll-content" style=""><a class="mdc-tab mdc-tab--active" style="" role="tab" aria-selected="true" tabindex="0" href="/lib"><span class="mdc-tab__content"><span class="mdc-tab__text-label">programs</span>
+<div class="wrapper svelte-vsvyj6"><div class="app-body svelte-vsvyj6"><div class="mdc-tab-bar" role="tablist"><div class="mdc-tab-scroller"><div class="mdc-tab-scroller__scroll-area" style=""><div class="mdc-tab-scroller__scroll-content" style=""><a class="mdc-tab mdc-tab--active" style="" role="tab" aria-selected="true" tabindex="0" href="/lib"><span class="mdc-tab__content"><span class="mdc-tab__text-label">programs</span>
     </span>
   <span class="mdc-tab-indicator mdc-tab-indicator--active"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
 </span>
@@ -41,10 +46,65 @@
     </span>
   <span class="mdc-tab-indicator"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
 </span>
+  <span class="mdc-tab__ripple"></span></a><a class="mdc-tab" style="" role="tab" aria-selected="false" tabindex="-1" href="/lib/search"><span class="mdc-tab__content"><span class="mdc-tab__text-label"><i class="material-icons mdc-tab__icon" aria-hidden="true">search</i></span>
+    </span>
+  <span class="mdc-tab-indicator"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+</span>
   <span class="mdc-tab__ripple"></span></a></div></div>
 </div>
 </div>
-	<p>Squat</p></div></div>
+<div class="content svelte-10qhuzm"><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Barbell row</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Bench press</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Bicep curls</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">exercise</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Chin-up</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">directions_run</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Deadlift</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Incline bench</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Kettlebell swing</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">weight</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Overhead press</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Plank</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">timer</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Pull-up</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">directions_run</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Push-up</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">directions_run</span>
+		</div>
+	
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Squat</span>
+			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+		</div>
+	
+</div></div>
+<button class="mdc-fab smui-fab--color-primary" style="bottom: 1em; right: 1em; position: absolute;"><div class="mdc-fab__ripple"></div>
+  
+  <i class="material-icons mdc-fab__icon" aria-hidden="true">add</i></button></div>
 	
 
 <div class="smui-bottom-app-bar" style=""><div class="smui-bottom-app-bar__section smui-paper smui-paper--unelevated smui-paper--color-secondary" style="justify-content: space-around;"><a href="/work" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Excersize"><div class="mdc-icon-button__ripple"></div>
@@ -64,14 +124,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="swbfjp">
-			import { start } from "../_app/immutable/start-ae33030f.js";
+		<script type="module" data-sveltekit-hydrate="1ii05wp">
+			import { start } from "../_app/immutable/start-c35c644c.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="swbfjp"]').parentNode,
-				version: "1676847852196",
+				target: document.querySelector('[data-sveltekit-hydrate="1ii05wp"]').parentNode,
+				version: "1676928205773",
 				hydrate: {
 					node_ids: [0, 2, 4],
 					data: [null,null,null],
