--- a/lib/search.html
+++ b/lib/search.html
@@ -18,9 +18,7 @@
 		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-da46b06b.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/_layout.svelte-37ebaad9.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/workouts/_page.svelte-6d8b265e.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/exercise-efe048a6.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/workout-00ec576f.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/search/_page.svelte-59c8ea9c.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -54,90 +52,7 @@
   <span class="mdc-tab__ripple"></span></a></div></div>
 </div>
 </div>
-<div class="content svelte-10qhuzm"><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><h2>5x5 A</h2>
-			<span style="vertical-align: middle">5x5
-						Squat</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">5x5
-						Bench press</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">5x5
-						Barbell row</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br>
-		</div>
-	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><h2>5x5 B</h2>
-			<span style="vertical-align: middle">5x5
-						Squat</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">5x5
-						Overhead press</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">5x5
-						Deadlift</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br>
-		</div>
-	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><h2>Madcow A</h2>
-			<span style="vertical-align: middle">5x5
-						Squat</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">5x5
-						Bench press</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">5x5
-						Barbell row</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br>
-		</div>
-	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><h2>Madcow B</h2>
-			<span style="vertical-align: middle">4x5
-						Squat</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">4x5
-						Incline bench</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">4x5
-						Deadlift</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br>
-		</div>
-	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><h2>Madcow C</h2>
-			<span style="vertical-align: middle">4x5
-						Squat</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">1x3
-						Squat</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">1x8
-						Squat</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">4x5
-						Bench press</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">1x3
-						Bench press</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">1x8
-						Bench press</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">4x5
-						Barbell row</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">1x3
-						Barbell row</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br><span style="vertical-align: middle">1x8
-						Barbell row</span>
-					<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
-					<br>
-		</div>
-	
-</div></div>
+<div class="content svelte-10qhuzm">search</div>
 <button class="mdc-fab smui-fab--color-primary" style="bottom: 1em; right: 1em; position: absolute;"><div class="mdc-fab__ripple"></div>
   
   <i class="material-icons mdc-fab__icon" aria-hidden="true">add</i></button></div>
@@ -160,16 +75,16 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="xq29qk">
+		<script type="module" data-sveltekit-hydrate="292bjm">
 			import { start } from "../_app/immutable/start-c35c644c.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="xq29qk"]').parentNode,
+				target: document.querySelector('[data-sveltekit-hydrate="292bjm"]').parentNode,
 				version: "1676928205773",
 				hydrate: {
-					node_ids: [0, 2, 6],
+					node_ids: [0, 2, 5],
 					data: [null,null,null],
 					form: null,
 					error: null
