--- a/settings.html
+++ b/settings.html
@@ -5,16 +5,18 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-404d5ec8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-ae33030f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-ff63070f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-1764df06.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-2bea6d64.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ripple-015e24f7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-95bd1728.js">
+		<link href="./_app/immutable/assets/_layout-9f83b41d.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-c35c644c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-6d0a9015.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-15ac4f7b.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-d58037d0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/SmuiElement-dbb92510.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/classAdderBuilder-af2bd1e8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ripple-3d668b62.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-a416b9c7.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/settings/_page.svelte-ea09d09a.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/settings/_page.svelte-44db4e4f.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -22,13 +24,14 @@
 
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded">
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
 
 <link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)">
 <link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)">
 
-<div class="wrapper svelte-ddhx5u"><div class="app-body svelte-ddhx5u"><h1>Settings</h1></div>
+<div class="wrapper svelte-vsvyj6"><div class="app-body svelte-vsvyj6"><h1>Settings</h1></div>
 	
 
 <div class="smui-bottom-app-bar" style=""><div class="smui-bottom-app-bar__section smui-paper smui-paper--unelevated smui-paper--color-secondary" style="justify-content: space-around;"><a href="/work" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Excersize"><div class="mdc-icon-button__ripple"></div>
@@ -48,16 +51,16 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="jqjpnt">
-			import { start } from "./_app/immutable/start-ae33030f.js";
+		<script type="module" data-sveltekit-hydrate="1w7oftq">
+			import { start } from "./_app/immutable/start-c35c644c.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="jqjpnt"]').parentNode,
-				version: "1676847852196",
+				target: document.querySelector('[data-sveltekit-hydrate="1w7oftq"]').parentNode,
+				version: "1676928205773",
 				hydrate: {
-					node_ids: [0, 6],
+					node_ids: [0, 7],
 					data: [null,null],
 					form: null,
 					error: null
