--- a/work.html
+++ b/work.html
@@ -5,16 +5,18 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-404d5ec8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-ae33030f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-ff63070f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-1764df06.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-2bea6d64.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ripple-015e24f7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-95bd1728.js">
+		<link href="./_app/immutable/assets/_layout-9f83b41d.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-c35c644c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-6d0a9015.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-15ac4f7b.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-d58037d0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/SmuiElement-dbb92510.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/classAdderBuilder-af2bd1e8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ripple-3d668b62.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-a416b9c7.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/work/_page.svelte-4b215b7c.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/work/_page.svelte-129e2224.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -22,13 +24,14 @@
 
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded">
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
 
 <link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)">
 <link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)">
 
-<div class="wrapper svelte-ddhx5u"><div class="app-body svelte-ddhx5u"><h1>Workout</h1>
+<div class="wrapper svelte-vsvyj6"><div class="app-body svelte-vsvyj6"><h1>Workout</h1>
 <p>Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p></div>
 	
 
@@ -49,16 +52,16 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="97f5zj">
-			import { start } from "./_app/immutable/start-ae33030f.js";
+		<script type="module" data-sveltekit-hydrate="79ofi0">
+			import { start } from "./_app/immutable/start-c35c644c.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="97f5zj"]').parentNode,
-				version: "1676847852196",
+				target: document.querySelector('[data-sveltekit-hydrate="79ofi0"]').parentNode,
+				version: "1676928205773",
 				hydrate: {
-					node_ids: [0, 8],
+					node_ids: [0, 9],
 					data: [null,null],
 					form: null,
 					error: null
