--- a/lib.html
+++ b/lib.html
@@ -6,21 +6,24 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-9f83b41d.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_layout-1a07f56b.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-c35c644c.js">
+		<link href="./_app/immutable/assets/_layout-658503d3.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-f83df8ee.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6d0a9015.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-15ac4f7b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-d58037d0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-7c5cf3ee.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-9526fde8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/SmuiElement-dbb92510.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/classAdderBuilder-af2bd1e8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ripple-3d668b62.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-a416b9c7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/dispatch-49762ebd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ripple-03e9247e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-e8904866.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/lib/_layout.svelte-37ebaad9.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/lib/_page.svelte-0a614a5f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/exercise-efe048a6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/workout-00ec576f.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/lib/_layout.svelte-7bef4bfa.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/lib/_page.svelte-cebb26e7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ActionIcons-fa62cfc4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/program-8a6257f1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/workout-61d879eb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/exercise-fc101538.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -54,7 +57,7 @@
   <span class="mdc-tab__ripple"></span></a></div></div>
 </div>
 </div>
-<div class="content svelte-10qhuzm"><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><h2>Stronglifts 5x5</h2>
+<div class="col-card-holder svelte-1700q2t"><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><h2>Stronglifts 5x5</h2>
 			<span style="vertical-align: middle">5x5 A</span>
 				<br><span style="vertical-align: middle">5x5 B</span>
 				<br>
@@ -90,14 +93,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1vngsyv">
-			import { start } from "./_app/immutable/start-c35c644c.js";
+		<script type="module" data-sveltekit-hydrate="yuaqx5">
+			import { start } from "./_app/immutable/start-f83df8ee.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="1vngsyv"]').parentNode,
-				version: "1676928205773",
+				target: document.querySelector('[data-sveltekit-hydrate="yuaqx5"]').parentNode,
+				version: "1677437846175",
 				hydrate: {
 					node_ids: [0, 2, 3],
 					data: [null,null,null],
