--- a/lib/workouts/edit.html
+++ b/lib/workouts/edit.html
@@ -2,24 +2,24 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="../favicon.png" />
+		<link rel="icon" href="../../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="../_app/immutable/assets/_layout-9f83b41d.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/_layout-658503d3.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-f83df8ee.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index-6d0a9015.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-7c5cf3ee.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-9526fde8.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/SmuiElement-dbb92510.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/classAdderBuilder-af2bd1e8.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/dispatch-49762ebd.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Ripple-03e9247e.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores-e8904866.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9cbb603b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/_layout.svelte-7bef4bfa.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/search/_page.svelte-59c8ea9c.js">
+		<link href="../../_app/immutable/assets/_layout-9f83b41d.css" rel="stylesheet">
+		<link href="../../_app/immutable/assets/_layout-658503d3.css" rel="stylesheet">
+		<link rel="modulepreload" href="../../_app/immutable/start-f83df8ee.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/index-6d0a9015.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons-7c5cf3ee.js">
+		<link rel="modulepreload" href="../../_app/immutable/components/pages/_layout.svelte-9526fde8.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/SmuiElement-dbb92510.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/classAdderBuilder-af2bd1e8.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/dispatch-49762ebd.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Ripple-03e9247e.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/stores-e8904866.js">
+		<link rel="modulepreload" href="../../_app/immutable/modules/pages/_layout.js-9cbb603b.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/_layout-da46b06b.js">
+		<link rel="modulepreload" href="../../_app/immutable/components/pages/lib/_layout.svelte-7bef4bfa.js">
+		<link rel="modulepreload" href="../../_app/immutable/components/pages/lib/workouts/edit/_page.svelte-505d69dd.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -38,23 +38,25 @@
     </span>
   <span class="mdc-tab-indicator"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
 </span>
-  <span class="mdc-tab__ripple"></span></a><a class="mdc-tab" style="" role="tab" aria-selected="false" tabindex="-1" href="/lib/workouts"><span class="mdc-tab__content"><span class="mdc-tab__text-label">workouts</span>
+  <span class="mdc-tab__ripple"></span></a><a class="mdc-tab mdc-tab--active" style="" role="tab" aria-selected="true" tabindex="0" href="/lib/workouts"><span class="mdc-tab__content"><span class="mdc-tab__text-label">workouts</span>
     </span>
-  <span class="mdc-tab-indicator"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+  <span class="mdc-tab-indicator mdc-tab-indicator--active"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
 </span>
   <span class="mdc-tab__ripple"></span></a><a class="mdc-tab" style="" role="tab" aria-selected="false" tabindex="-1" href="/lib/exercises"><span class="mdc-tab__content"><span class="mdc-tab__text-label">exercises</span>
     </span>
   <span class="mdc-tab-indicator"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
 </span>
-  <span class="mdc-tab__ripple"></span></a><a class="mdc-tab mdc-tab--active" style="" role="tab" aria-selected="true" tabindex="0" href="/lib/search"><span class="mdc-tab__content"><span class="mdc-tab__text-label"><i class="material-icons mdc-tab__icon" aria-hidden="true">search</i></span>
+  <span class="mdc-tab__ripple"></span></a><a class="mdc-tab" style="" role="tab" aria-selected="false" tabindex="-1" href="/lib/search"><span class="mdc-tab__content"><span class="mdc-tab__text-label"><i class="material-icons mdc-tab__icon" aria-hidden="true">search</i></span>
     </span>
-  <span class="mdc-tab-indicator mdc-tab-indicator--active"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+  <span class="mdc-tab-indicator"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
 </span>
   <span class="mdc-tab__ripple"></span></a></div></div>
 </div>
 </div>
-<div class="col-card-holder svelte-1700q2t">search</div>
-</div>
+<div class="col-card-holder svelte-1700q2t"></div>
+<button class="mdc-fab smui-fab--color-primary" style="bottom: 1em; right: 1em; position: absolute;"><div class="mdc-fab__ripple"></div>
+  
+  <i class="material-icons mdc-fab__icon" aria-hidden="true">add</i></button></div>
 	
 
 <div class="smui-bottom-app-bar" style=""><div class="smui-bottom-app-bar__section smui-paper smui-paper--unelevated smui-paper--color-secondary" style="justify-content: space-around;"><a href="/work" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Excersize"><div class="mdc-icon-button__ripple"></div>
@@ -74,16 +76,16 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1qr96cv">
-			import { start } from "../_app/immutable/start-f83df8ee.js";
+		<script type="module" data-sveltekit-hydrate="104mpg2">
+			import { start } from "../../_app/immutable/start-f83df8ee.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="1qr96cv"]').parentNode,
+				target: document.querySelector('[data-sveltekit-hydrate="104mpg2"]').parentNode,
 				version: "1677437846175",
 				hydrate: {
-					node_ids: [0, 2, 5],
+					node_ids: [0, 2, 7],
 					data: [null,null,null],
 					form: null,
 					error: null
