--- a/lib/exercises.html
+++ b/lib/exercises.html
@@ -6,20 +6,22 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-9f83b41d.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/_layout-1a07f56b.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-c35c644c.js">
+		<link href="../_app/immutable/assets/_layout-658503d3.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/start-f83df8ee.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6d0a9015.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-15ac4f7b.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-d58037d0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-7c5cf3ee.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-9526fde8.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/SmuiElement-dbb92510.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/classAdderBuilder-af2bd1e8.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Ripple-3d668b62.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores-a416b9c7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/dispatch-49762ebd.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Ripple-03e9247e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores-e8904866.js">
 		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/_layout.svelte-37ebaad9.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/exercises/_page.svelte-2df9af45.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/exercise-efe048a6.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/_layout.svelte-7bef4bfa.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/exercises/_page.svelte-bc4a83f2.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/ActionIcons-fa62cfc4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/exercise-fc101538.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -34,17 +36,17 @@
 <link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)">
 <link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)">
 
-<div class="wrapper svelte-vsvyj6"><div class="app-body svelte-vsvyj6"><div class="mdc-tab-bar" role="tablist"><div class="mdc-tab-scroller"><div class="mdc-tab-scroller__scroll-area" style=""><div class="mdc-tab-scroller__scroll-content" style=""><a class="mdc-tab mdc-tab--active" style="" role="tab" aria-selected="true" tabindex="0" href="/lib"><span class="mdc-tab__content"><span class="mdc-tab__text-label">programs</span>
+<div class="wrapper svelte-vsvyj6"><div class="app-body svelte-vsvyj6"><div class="mdc-tab-bar" role="tablist"><div class="mdc-tab-scroller"><div class="mdc-tab-scroller__scroll-area" style=""><div class="mdc-tab-scroller__scroll-content" style=""><a class="mdc-tab" style="" role="tab" aria-selected="false" tabindex="-1" href="/lib"><span class="mdc-tab__content"><span class="mdc-tab__text-label">programs</span>
     </span>
-  <span class="mdc-tab-indicator mdc-tab-indicator--active"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+  <span class="mdc-tab-indicator"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
 </span>
   <span class="mdc-tab__ripple"></span></a><a class="mdc-tab" style="" role="tab" aria-selected="false" tabindex="-1" href="/lib/workouts"><span class="mdc-tab__content"><span class="mdc-tab__text-label">workouts</span>
     </span>
   <span class="mdc-tab-indicator"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
 </span>
-  <span class="mdc-tab__ripple"></span></a><a class="mdc-tab" style="" role="tab" aria-selected="false" tabindex="-1" href="/lib/exercises"><span class="mdc-tab__content"><span class="mdc-tab__text-label">exercises</span>
+  <span class="mdc-tab__ripple"></span></a><a class="mdc-tab mdc-tab--active" style="" role="tab" aria-selected="true" tabindex="0" href="/lib/exercises"><span class="mdc-tab__content"><span class="mdc-tab__text-label">exercises</span>
     </span>
-  <span class="mdc-tab-indicator"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+  <span class="mdc-tab-indicator mdc-tab-indicator--active"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
 </span>
   <span class="mdc-tab__ripple"></span></a><a class="mdc-tab" style="" role="tab" aria-selected="false" tabindex="-1" href="/lib/search"><span class="mdc-tab__content"><span class="mdc-tab__text-label"><i class="material-icons mdc-tab__icon" aria-hidden="true">search</i></span>
     </span>
@@ -53,52 +55,52 @@
   <span class="mdc-tab__ripple"></span></a></div></div>
 </div>
 </div>
-<div class="content svelte-10qhuzm"><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Barbell row</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+<div class="col-card-holder svelte-1700q2t"><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Barbell row</span>
+			<span class="material-symbols-rounded">fitness_center</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Bench press</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Bench press</span>
+			<span class="material-symbols-rounded">fitness_center</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Bicep curls</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">exercise</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Bicep curls</span>
+			<span class="material-symbols-rounded">exercise</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Chin-up</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">directions_run</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Chin-up</span>
+			<span class="material-symbols-rounded">directions_run</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Deadlift</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Deadlift</span>
+			<span class="material-symbols-rounded">fitness_center</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Incline bench</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Incline bench</span>
+			<span class="material-symbols-rounded">fitness_center</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Kettlebell swing</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">weight</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Kettlebell swing</span>
+			<span class="material-symbols-rounded">weight</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Overhead press</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Overhead press</span>
+			<span class="material-symbols-rounded">fitness_center</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Plank</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">timer</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Plank</span>
+			<span class="material-symbols-rounded">timer</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Pull-up</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">directions_run</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Pull-up</span>
+			<span class="material-symbols-rounded">directions_run</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Push-up</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">directions_run</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Push-up</span>
+			<span class="material-symbols-rounded">directions_run</span>
 		</div>
 	
-</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content"><span style="vertical-align: middle">Squat</span>
-			<span class="material-symbols-rounded" style="vertical-align: middle; float: right;">fitness_center</span>
+</div><div class="mdc-card mdc-card--outlined"><div class="smui-card__content" style="display: flex; align-items: center;"><span style="flex: 1">Squat</span>
+			<span class="material-symbols-rounded">fitness_center</span>
 		</div>
 	
 </div></div>
@@ -124,14 +126,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1ii05wp">
-			import { start } from "../_app/immutable/start-c35c644c.js";
+		<script type="module" data-sveltekit-hydrate="1c44jt3">
+			import { start } from "../_app/immutable/start-f83df8ee.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="1ii05wp"]').parentNode,
-				version: "1676928205773",
+				target: document.querySelector('[data-sveltekit-hydrate="1c44jt3"]').parentNode,
+				version: "1677437846175",
 				hydrate: {
 					node_ids: [0, 2, 4],
 					data: [null,null,null],
