--- a/work.html
+++ b/work.html
@@ -6,17 +6,27 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-9f83b41d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-c35c644c.js">
+		<link href="./_app/immutable/assets/_layout-658503d3.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/WorkoutCard-0df0f9bf.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-f83df8ee.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6d0a9015.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-15ac4f7b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-d58037d0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-7c5cf3ee.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-9526fde8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/SmuiElement-dbb92510.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/classAdderBuilder-af2bd1e8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ripple-3d668b62.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-a416b9c7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/dispatch-49762ebd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ripple-03e9247e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-e8904866.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/work/_page.svelte-129e2224.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/work/_page.svelte-296315e3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/progress-170a61e1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/program-8a6257f1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/workout-61d879eb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/exercise-fc101538.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/WorkoutCard-f29cb89b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ActionIcons-fa62cfc4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/navigation-7aa17d52.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -31,8 +41,41 @@
 <link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)">
 <link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)">
 
-<div class="wrapper svelte-vsvyj6"><div class="app-body svelte-vsvyj6"><h1>Workout</h1>
-<p>Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p></div>
+<div class="wrapper svelte-vsvyj6"><div class="app-body svelte-vsvyj6"><div class="col-card-holder svelte-1700q2t"><h1>Stronglifts 5x5</h1>
+	<div class="mdc-card mdc-card--outlined"><div class="mdc-card__primary-action" style="" tabindex="0"><div class="mdc-card__ripple"></div>
+  <div class="smui-card__content" href="/work/active?program=stronglifts_5x5&amp;workout=5x5_a"><h2>5x5 A</h2>
+			<div class="row svelte-1dde68b"><span class="name svelte-1dde68b">Squat</span>
+					<span class="sets row svelte-1dde68b">5x5
+						<span class="material-symbols-rounded">fitness_center
+						</span></span>
+				</div><div class="row svelte-1dde68b"><span class="name svelte-1dde68b">Bench press</span>
+					<span class="sets row svelte-1dde68b">5x5
+						<span class="material-symbols-rounded">fitness_center
+						</span></span>
+				</div><div class="row svelte-1dde68b"><span class="name svelte-1dde68b">Barbell row</span>
+					<span class="sets row svelte-1dde68b">5x5
+						<span class="material-symbols-rounded">fitness_center
+						</span></span>
+				</div></div>
+</div>
+</div><div class="mdc-card mdc-card--outlined"><div class="mdc-card__primary-action" style="" tabindex="0"><div class="mdc-card__ripple"></div>
+  <div class="smui-card__content" href="/work/active?program=stronglifts_5x5&amp;workout=5x5_b"><h2>5x5 B</h2>
+			<div class="row svelte-1dde68b"><span class="name svelte-1dde68b">Squat</span>
+					<span class="sets row svelte-1dde68b">5x5
+						<span class="material-symbols-rounded">fitness_center
+						</span></span>
+				</div><div class="row svelte-1dde68b"><span class="name svelte-1dde68b">Overhead press</span>
+					<span class="sets row svelte-1dde68b">5x5
+						<span class="material-symbols-rounded">fitness_center
+						</span></span>
+				</div><div class="row svelte-1dde68b"><span class="name svelte-1dde68b">Deadlift</span>
+					<span class="sets row svelte-1dde68b">5x5
+						<span class="material-symbols-rounded">fitness_center
+						</span></span>
+				</div></div>
+</div>
+</div>
+</div></div>
 	
 
 <div class="smui-bottom-app-bar" style=""><div class="smui-bottom-app-bar__section smui-paper smui-paper--unelevated smui-paper--color-secondary" style="justify-content: space-around;"><a href="/work" class="undecorated svelte-bt2pnp underlined"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Excersize"><div class="mdc-icon-button__ripple"></div>
@@ -52,16 +95,16 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="79ofi0">
-			import { start } from "./_app/immutable/start-c35c644c.js";
+		<script type="module" data-sveltekit-hydrate="5vnzt3">
+			import { start } from "./_app/immutable/start-f83df8ee.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="79ofi0"]').parentNode,
-				version: "1676928205773",
+				target: document.querySelector('[data-sveltekit-hydrate="5vnzt3"]').parentNode,
+				version: "1677437846175",
 				hydrate: {
-					node_ids: [0, 9],
+					node_ids: [0, 10],
 					data: [null,null],
 					form: null,
 					error: null
